front end registration setup

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="container" style="text-align:center">
+<div class="container">
   <router-outlet></router-outlet>
 </div>
 
