--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -19,6 +19,7 @@
         <li><a href="#contact">Blog</a></li>
         <li><a href="#contact">Login</a></li>
         <li><a href="#contact">Logout</a></li>
+        <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/register">Register</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
