--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" routerLink="/">MEAN Blog</a>
+      <a class="navbar-brand" routerLink="/" style="font-family: 'Pacifico', cursive;">Your Blog</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-left">
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li *ngIf="this.authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/dashboard">Dashboard</a></li>
         <li *ngIf="this.authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/profile">Profile</a></li>
-        <li *ngIf="this.authService.loggedIn()" ><a href="#">Blog</a></li>
+        <li *ngIf="this.authService.loggedIn()"  [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/blog">Blog</a></li>
         <li *ngIf="!this.authService.loggedIn()" ><a routerLink="/login">Login</a></li>
         <li *ngIf="this.authService.loggedIn()"><a href="#" (click)="onLogoutClick()">Logout</a></li>
         <li *ngIf="!this.authService.loggedIn()" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}"><a routerLink="/register">Register</a></li>
