--- a/client/src/app/blog/blog.component.html
+++ b/client/src/app/blog/blog.component.html
@@ -1,10 +1,10 @@
 <h1 class="page-header">Blog Feed</h1>
-<!-- 
-<div class="row show-hide-message">
+
+<div class="row show-hide-message" *ngIf="message && newPost">
   <div [ngClass]="messageClass">
     {{ message }}
   </div>
-</div> -->
+</div>
 
 <button type="button" name="button" class="btn btn-warning" *ngIf="!newPost" (click)="newBlogForm()">New Post</button>
 <button [disabled]="loadingBlogs" type="button" name="button" class="btn btn-warning" *ngIf="!newPost" (click)="reloadBlogs()"><span class="glyphicon glyphicon-repeat"></span>&nbsp;&nbsp;Reload</button>
@@ -12,6 +12,43 @@
 
 <br>
 <br>
+
+<!-- NEW BLOG FORM -->
+
+<form [formGroup]="form" name="blogForm" (submit)="onBlogSubmit()" *ngIf="newPost"> 
+  <!-- TITLE -->
+  <div class="form-group">
+    <label for="title">Title</label>
+    <div [ngClass]="{'has-success': form.controls.title.valid, 'has-error': form.controls.title.dirty && form.controls.title.errors}">
+      <input type="text" name="title" class="form-control" placeholder="Title" autocomplete="off" formControlName="title" />
+      <ul class="help-block">
+        <li *ngIf="form.controls.title.dirty && form.controls.title.errors?.required">This field is required.</li>
+        <li *ngIf="form.controls.title.dirty && (form.controls.title.errors?.minlength || form.controls.title.errors?.maxlength)">Maximum length: 50. Minimum length: 5.</li>
+        <li *ngIf="form.controls.title.dirty && form.controls.title.errors?.alphaNumericValidation">Only letters and numbers allowed in title.</li>
+      </ul>
+    </div>
+  </div>
+  <!-- TITLE END -->
+
+  <!-- BODY -->
+  <div class="form-group">
+    <label for="body">Body</label>
+    <div [ngClass]="{'has-success': form.controls.body.valid, 'has-error': form.controls.body.dirty && form.controls.body.errors}">
+      <textarea name="body" id="" cols="30" rows="10" placeholder="Write post here." class="form-control" formControlName="body"></textarea>
+      <ul class="help-block">
+        <li *ngIf="form.controls.body.dirty && form.controls.body.errors?.required">This field is required.</li>
+        <li *ngIf="form.controls.body.dirty && (form.controls.body.errors?.minlength || form.controls.body.errors?.maxlength)">Maximum length: 500. Minimum length: 5.</li>
+      </ul>
+    </div>
+  </div>
+  <!-- BODY END -->
+
+  <button [disabled]="processing" type="button" (click)="goBack()" class="btn btn-warning">Go Back</button>
+  <button [disabled]="processing || !form.valid" type="submit"  class="btn btn-success">Submit</button>
+
+</form>
+
+<!-- END NEW BLOG FORM -->
 
 <div *ngIf="!newPost">
   <div class="panel panel-primary">
