--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -2,8 +2,9 @@
     <h1>MEAN Stack Web App Demo</h1>
     <p class="lead">A blogging platform by <strong>Harry Wu</strong></p>
     <div>
-      <a routerLink="/register" class="btn btn-primary">Register</a>
-      <a routerLink="/login" class="btn btn-default">Login</a>
+      <a routerLink="/register" class="btn btn-primary"  *ngIf="!authService.loggedIn()">Register</a>
+      <a routerLink="/login" class="btn btn-default" *ngIf="!authService.loggedIn()">Login</a>
+      <a routerLink="/blog" class="btn btn-success" *ngIf="authService.loggedIn()">View Blogs</a>
     </div>
   </div>
   
